Updated step tracking, now uses images instead of progress bar

--- a/tgen/SummaryPage.html
+++ b/tgen/SummaryPage.html
@@ -60,14 +60,7 @@
 	</div>
 
 <!-- =========================================Process bar=========================================-->
-	<div class="process_bar">
-		<div class="process_step">
-			<div class="process_step1"><a>Inputting Data</a></div>
-			<div class="process_step2"><a>Package Sent</a></div>
-			<div class="process_step3"><a>Processing Samples</a></div>
-			<div class="process_step4"><a>Complete</a></div>
-		</div>
-		<progress class="progress" id="progress" value="2" max="4"></progress>
+	<div class="process_bar" id="progressBar">
 
 	</div>
 	<script>
