--- a/tgen/ErrorEmailPage.html
+++ b/tgen/ErrorEmailPage.html
@@ -1,55 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US" class="no-js">
 <head>
-    <link rel="stylesheet" href="css/asset/shortcode-common.css">
-    <link rel="stylesheet" href="css/EmailErrorPage.css">
-      <link rel="stylesheet" href="css/ErrorPage.css">
-    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="responsive, template, portfolio, html, css, javascript, Theme" />
+    <meta name="author" content="">
+    <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
     <script src="/controller.js/"></script>
+    <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="644153343980-lkn78chclnlj0cgs60makd6ak0aa323f.apps.googleusercontent.com">
     <title>TGEN</title>
-  <!--favicon icon-->
-  <link rel="icon" href="images/favicon.png">
+
+    <!--favicon icon-->
+    <link rel="icon" href="images/favicon.png">
+
+    <!--google font-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
+
+    <!-- style css -->
+    <link rel="stylesheet" href="css/asset/shortcode-common.css">
+
+
+    <link rel="stylesheet" href="css/ErrorEmailPage.css">
+
+
 </head>
+
 <body class="spresentation">
-<!-- =========================================Start header section== =======================================-->
+    <!-- =========================================Start header section== =======================================-->
     <header class="presentation_header">
-        <a href="#" class="logo"><img src="images/logo.png" alt="logo" height="50" width="150"></a>
-        <div class="title">
-            <center><a id="ErrorTitle">Error Page</a></center>
-        </div>
+	<div class="container-fluid">
+    	<div class="row">
+        	<div class="col-sm-2">
+          	<img src="images/logo.png" class="logo" alt="logo" height="50" width="150">
 
-        <button class = "signOutButton" align="right" onclick="signOut();">Sign out</button>
-    </header>
-<!-- =========================================End header section=========================================-->
+        	</div>
+    	</div>
+	</div>
+	<button class = "signOutButton" align="right" onclick="signOut();">Sign out</button>
 
-<!-- =========================================Email Table Template=========================================-->
+</header>
 
-<h2>Communicate Your Resolution To TGen Point Of Contact:</h2>
+    <!-- =========================================End header section=========================================-->
 
-<table style="width:50%">
-  <tr>
-    <th>To:</th>
-    <td>
-      <a href="mailto:TGenNorth@gmail.com">
-        <div style="height:100%;width:100%;color:blue;">
-      TGen Support
+
+    <!-- =========================================Start Sidebar section== =======================================-->
+    <div class="presentation_sidebar">
+      <style>
+        button:hover {
+            background:#00CDCD;
+        }
+        </style>
+		<button class="Function" onClick="navCreatePackage();">Create New Package</button>
+
+		<div class="sidebar" id="buttons">
+      <script>
+      initialize(function(){createButtons("buttons" , function(){});});
+      </script>
     </div>
-  </a>
-</td>
-  </tr>
-  <tr>
-    <th>From:</th>
-    <td>Your Email</td>
-  </tr>
-  <tr>
-    <th>Subject:</th>
-    <td>Sample Flag Resolution Submission #12345</td>
-  </tr>
-  <tr>
-    <th rowspan="2">Message:</th>
-    <td>Please proceed with all Samples, excluding problematic samples</td>
-  </tr>
-  <tr>
-    <td>Please do what you can to recover data for the problematic samples</td>
-  </tr>
-<table>
+
+    <!-- =========================================Table Section=========================================-->
+</div>
+<div class="errorEmailDiv" id="errorEmailDiv">
+  <form action="">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" placeholder="Your message.." style="height:200px"></textarea>
+
+      <input type="submit" value="Submit">
+    </form>
+</div>
+</body>
+
+</html>
