--- a/tgen/SummaryPage.html
+++ b/tgen/SummaryPage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://printjs-4de6.kxcdn.com/print.min.css">
 	<link rel="stylesheet" href="css/asset/shortcode-common.css">
 	<link rel="stylesheet" href="css/Summarypage.css">
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
@@ -52,7 +54,7 @@
 	<div class="right_sidebar" id="summaryButtons">
 		<button class="botton_section" onclick ="navMetadata();">MetaData Form</button><br>
 
-		<button class="botton_section">Generate sample labels</button>
+		<button class="botton_section" onclick ="getQRCodes();">Generate sample labels</button>
 
 		<button class="botton_section" onclick ="trackingNumber();">Enter Tracking #</button><br>
 
