Completed Get Help feature

--- a/tgen/CreatePackage.html
+++ b/tgen/CreatePackage.html
@@ -16,6 +16,8 @@
         <div class="title">
             <center><a>Create New Package</a></center>
         </div>
+				<button class = "gethelpButton" align="right" onclick="navErrorEmailPage();">Get Help</button>
+		    <button class = "signOutButton" onclick="signOut();">Sign out</button>
     </header>
 <!-- =========================================End header section=========================================-->
 <div class="presentation_sidebar">
