--- a/tgen/ErrorPage.html
+++ b/tgen/ErrorPage.html
@@ -40,7 +40,8 @@
         	</div>
     	</div>
 	</div>
-	<button class = "signOutButton" align="right" onclick="signOut();">Sign out</button>
+  <button class = "gethelpButton" align="right" onclick="navErrorEmailPage();">Get Help</button>
+  <button class = "signOutButton" onclick="signOut();">Sign out</button>
 
 </header>
 
@@ -65,7 +66,7 @@
     <!-- =========================================Table Section=========================================-->
 </div>
 <div class="table" id="errorDiv">
-  
+
 </div>
 </body>
 
