--- a/tgen/MetadataForm.html
+++ b/tgen/MetadataForm.html
@@ -25,7 +25,8 @@
 	        </div>
     	</div>
 	</div>
-	<button class = "signOutButton" align="right" onclick="signOut();">Sign out</button>
+	<button class = "gethelpButton" align="right" onclick="navErrorEmailPage();">Get Help</button>
+	<button class = "signOutButton" onclick="signOut();">Sign out</button>
 
 </header>
 <!-- =========================================End header section=========================================-->
