--- a/tgen/index.html
+++ b/tgen/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/asset/shortcode-common.css">
 
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/Summarypage.css">
 
 
 </head>
@@ -50,11 +50,7 @@
 
     <!-- =========================================Start Sidebar section== =======================================-->
     <div class="presentation_sidebar">
-      <style>
-        button:hover {
-            background:#00CDCD;
-        }
-        </style>
+
 		<button class="Function" onClick="navCreatePackage();">Create New Package</button>
 
 		<div class="sidebar" id="buttons">
